# nomad-schema-plugin-fhi-catalysis

./: CITATION.cff  README.md  nomad.yaml  pyproject.toml
docs/explanation/: explanation.md
docs/how_to/: use_this_plugin.md
nomadschemacatalysis/: catalytic_measurement.py  electro_catalysis.py  nomad_plugin.yaml  schema.py
nomadschemacatalysis/src/: pyproject.toml
nomadschemaexample/: nomad_plugin.yaml  schema.py
src/nomad_catalysis/: catalytic_measurement.py  schema.py
tests/: test_schema.py
tests/data/: MoO3_C2_performance.xlsx  catalyst.archive.yaml  test_schema_clean_data.archive.yaml
